# rust-dev-challenge-pdictor

./: Cargo.toml  MONITOR_USAGE.md
examples/: demo.rs
src/: config.rs  errors.rs  lib.rs  mock_api.rs  models.rs  monitor.rs  tests.rs
src/provider/: a_provider.rs  b_provider.rs  mod.rs  provider.rs
