[package]
name = "rust-challange"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockito = "1.2"
async-trait = "0.1"
thiserror = "1.0"

[features]
default = ["b_provider"]
a_provider = []
b_provider = []
monitoring = []
##cargo build --no-default-features --features b_provider
##cargo build --features b_provider,monitoring
